generated/GLFW3.cs


    public unsafe partial class Test : IDisposable
    {
        [StructLayout(LayoutKind.Explicit, Size = 0)]
        public partial struct __Internal
        {
            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.ThisCall,
                EntryPoint="??0Test@@QAE@ABU0@@Z")]
            internal static extern global::System.IntPtr cctor_1(global::System.IntPtr instance, global::System.IntPtr _0);
        }

        public global::System.IntPtr __Instance { get; protected set; }

        protected int __PointerAdjustment;
        internal static readonly global::System.Collections.Concurrent.ConcurrentDictionary<IntPtr, global::glfw3.Test> NativeToManagedMap = new global::System.Collections.Concurrent.ConcurrentDictionary<IntPtr, global::glfw3.Test>();
        protected void*[] __OriginalVTables;

        protected bool __ownsNativeInstance;

        internal static global::glfw3.Test __CreateInstance(global::System.IntPtr native, bool skipVTables = false)
        {
            return new Test(native.ToPointer(), skipVTables);
        }

        internal static global::glfw3.Test __CreateInstance(global::glfw3.Test.__Internal native, bool skipVTables = false)
        {
            return new Test(native, skipVTables);
        }

        private static void* __CopyValue(global::glfw3.Test.__Internal native)
        {
            var ret = Marshal.AllocHGlobal(sizeof(global::glfw3.Test.__Internal));
            *(global::glfw3.Test.__Internal*) ret = native;
            return ret.ToPointer();
        }

        private Test(global::glfw3.Test.__Internal native, bool skipVTables = false)
            : this(__CopyValue(native), skipVTables)
        {
            __ownsNativeInstance = true;
            NativeToManagedMap[__Instance] = this;
        }

        protected Test(void* native, bool skipVTables = false)
        {
            if (native == null)
                return;
            __Instance = new global::System.IntPtr(native);
        }

        public Test()
        {
            __Instance = Marshal.AllocHGlobal(sizeof(global::glfw3.Test.__Internal));
            __ownsNativeInstance = true;
            NativeToManagedMap[__Instance] = this;
        }

        public Test(global::glfw3.Test _0)
        {
            __Instance = Marshal.AllocHGlobal(sizeof(global::glfw3.Test.__Internal));
            __ownsNativeInstance = true;
            NativeToManagedMap[__Instance] = this;
            *((global::glfw3.Test.__Internal*) __Instance) = *((global::glfw3.Test.__Internal*) _0.__Instance);
        }

        public void Dispose()
        {
            Dispose(disposing: true);
        }

        public virtual void Dispose(bool disposing)
        {
            global::glfw3.Test __dummy;
            NativeToManagedMap.TryRemove(__Instance, out __dummy);
            if (__ownsNativeInstance)
                Marshal.FreeHGlobal(__Instance);
        }
    }

    public unsafe partial class glfw3
    {
        public partial struct __Internal
        {
            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwInit")]
            internal static extern int GlfwInit_0();

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwTerminate")]
            internal static extern void GlfwTerminate_0();

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="getTests")]
            internal static extern global::System.IntPtr GetTests_0();

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwGetVersion")]
            internal static extern void GlfwGetVersion_0(int* major, int* minor, int* rev);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwGetVersionString")]
            internal static extern global::System.IntPtr GlfwGetVersionString_0();

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwSetErrorCallback")]
            internal static extern global::System.IntPtr GlfwSetErrorCallback_0(global::System.IntPtr cbfun);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwGetMonitors")]
            internal static extern global::System.IntPtr GlfwGetMonitors_0(int* count);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwGetPrimaryMonitor")]
            internal static extern global::System.IntPtr GlfwGetPrimaryMonitor_0();

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwGetMonitorPos")]
            internal static extern void GlfwGetMonitorPos_0(global::System.IntPtr monitor, int* xpos, int* ypos);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwGetMonitorPhysicalSize")]
            internal static extern void GlfwGetMonitorPhysicalSize_0(global::System.IntPtr monitor, int* widthMM, int* heightMM);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwGetMonitorName")]
            internal static extern global::System.IntPtr GlfwGetMonitorName_0(global::System.IntPtr monitor);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwSetMonitorCallback")]
            internal static extern global::System.IntPtr GlfwSetMonitorCallback_0(global::System.IntPtr cbfun);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwGetVideoModes")]
            internal static extern global::System.IntPtr GlfwGetVideoModes_0(global::System.IntPtr monitor, int* count);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwGetVideoMode")]
            internal static extern global::System.IntPtr GlfwGetVideoMode_0(global::System.IntPtr monitor);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwSetGamma")]
            internal static extern void GlfwSetGamma_0(global::System.IntPtr monitor, float gamma);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwGetGammaRamp")]
            internal static extern global::System.IntPtr GlfwGetGammaRamp_0(global::System.IntPtr monitor);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwSetGammaRamp")]
            internal static extern void GlfwSetGammaRamp_0(global::System.IntPtr monitor, global::System.IntPtr ramp);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwDefaultWindowHints")]
            internal static extern void GlfwDefaultWindowHints_0();

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwWindowHint")]
            internal static extern void GlfwWindowHint_0(int hint, int value);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwCreateWindow")]
            internal static extern global::System.IntPtr GlfwCreateWindow_0(int width, int height, [MarshalAs(UnmanagedType.LPStr)] string title, global::System.IntPtr monitor, global::System.IntPtr share);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwDestroyWindow")]
            internal static extern void GlfwDestroyWindow_0(global::System.IntPtr window);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwWindowShouldClose")]
            internal static extern int GlfwWindowShouldClose_0(global::System.IntPtr window);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwSetWindowShouldClose")]
            internal static extern void GlfwSetWindowShouldClose_0(global::System.IntPtr window, int value);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwSetWindowTitle")]
            internal static extern void GlfwSetWindowTitle_0(global::System.IntPtr window, [MarshalAs(UnmanagedType.LPStr)] string title);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwSetWindowIcon")]
            internal static extern void GlfwSetWindowIcon_0(global::System.IntPtr window, int count, global::System.IntPtr images);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwGetWindowPos")]
            internal static extern void GlfwGetWindowPos_0(global::System.IntPtr window, int* xpos, int* ypos);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwSetWindowPos")]
            internal static extern void GlfwSetWindowPos_0(global::System.IntPtr window, int xpos, int ypos);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("glfw3", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="glfwGetWindowSize")]
            internal static extern void GlfwGetWindowSize_0(global::System.IntPtr window, int* width, int* height);
